added rule to register a product

--- a/src/SMarketplace.API/appsettings.json
+++ b/src/SMarketplace.API/appsettings.json
@@ -1,10 +1,22 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=(localdb)\\mssqllocaldb;Initial Catalog=SMarketplaceDB;Integrated Security=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "!@XPTO170411XPTOSECRET111704@!",
+    "ExpiracaoHoras": 8,
+    "Emissor": "MarketplaceApi",
+    "ValidoEm": "https://localhost"
+  },
+  "AppSettingsUrl": {
+    "AutenticationUrl": "https://dev.sitemercado.com.br"
   },
   "AllowedHosts": "*"
 }
