--- a/src/SMarketplace.API/SMarketplace.API.csproj
+++ b/src/SMarketplace.API/SMarketplace.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.7">
 			<PrivateAssets>all</PrivateAssets>
@@ -24,8 +25,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\SMarketplace.Application\SMarketplace.Application.csproj" />
 	  <ProjectReference Include="..\SMarketplace.Core\SMarketplace.Core.csproj" />
-	  <ProjectReference Include="..\SMarketplace.Domain\SMarketplace.Domain.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Resources\Images\" />
 	</ItemGroup>
 
 
