--- a/src/SMarketplace.Application/SMarketplace.Application.csproj
+++ b/src/SMarketplace.Application/SMarketplace.Application.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SMarketplace.Data\SMarketplace.Data.csproj" />
     <ProjectReference Include="..\SMarketplace.Domain\SMarketplace.Domain.csproj" />
   </ItemGroup>
 
