--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,10 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: CI do Projeto Marketplace-api
 
 on:
   push:
-    branches: [ "main","ci" ]
+    branches: [ "main", "ci" ]
   pull_request:
     branches: [ "main" ]
 
@@ -16,13 +15,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Install ICU
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libicu-dev
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 3.1.x
+
+    - name: Set environment variables
+      run: echo "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=true" >> $GITHUB_ENV
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --no-restore
+
     - name: Test
       run: dotnet test --no-build --verbosity normal
