--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 name: CI do Projeto Marketplace-api
 
 on:
@@ -11,7 +9,8 @@ on:
 jobs:
   tests:
     name: Tests
-    runs-on: ubuntu-latest
+    # Alterando o ambiente para o Ubuntu 20.04
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v4
